<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainactivity.MainActivity"
    tools:deviceIds="tv">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark"/>

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/page_top_padding"
        android:paddingBottom="@dimen/page_bottom_padding"
        android:paddingStart="@dimen/page_side_padding"
        android:paddingEnd="@dimen/page_side_padding">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/one_time_purchase" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/gardener"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/item_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/be_gardener" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/consumable_purchase" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/item_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/buy_a_rose" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/tree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/item_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/buy_a_tree" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/subscriptions" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/weekly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/item_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/weekly_sub" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/logs" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/view_logs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/item_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/view" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:text="@string/contact" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/item_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/not_working" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:text="@string/github_link" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/loading_indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loading_indicator_bg"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>